--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,12 @@
+.env*
+dot.env*
+!dot.env.default
+
+config.py*
+!config.py.default
+
+migrations/
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
