--- a/pytest.ini
+++ b/pytest.ini
@@ -1,5 +1,5 @@
 [pytest]
 minversion = 6.0
-addopts = -v -rsxX -l --strict
+addopts = -v -rsxX --strict --tb=short --exitfirst
 xfail_strict = True
-norecursedirs=tests/helpers
+norecursedirs = tests/helpers
