--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,12 @@
 alembic==1.4.3
 aniso8601==8.0.0
 attrs==20.2.0
+Authlib==0.15.2
+cffi==1.14.3
 click==7.1.2
+cryptography==3.2.1
 Flask==1.1.2
 Flask-JWT-Extended==3.24.1
-flask-marshmallow==0.14.0
 Flask-Migrate==2.5.3
 Flask-RESTful==0.3.8
 Flask-SQLAlchemy==2.4.4
@@ -15,10 +17,10 @@ Jinja2==2.11.2
 Mako==1.1.3
 MarkupSafe==1.1.1
 marshmallow==3.8.0
-marshmallow-sqlalchemy==0.24.0
 packaging==20.4
 pluggy==0.13.1
 py==1.9.0
+pycparser==2.20
 PyJWT==1.7.1
 pyparsing==2.4.7
 pytest==6.1.1
